<resources>

    App Name
    <string name="app_name">Watchpoint</string>

    Displayed Strings
    <string name="empty"/>
    <string name="send_tutorial">Start Guide on Watch</string>
    <string name="welcome">Welcome to Watchpoint</string>
    <string name="allGuides">View All Guides.</string>
    <string name="heartRate">View Health Info.</string>
    <string name="dailyTasks">Daily Tasks</string>
    <string name="deleteData">Delete All Heart-rate Data.</string>
    <string name="deleteCheck">Are you sure?</string>
    <string name="deleteComplete">All Heart-rate Data Deleted.</string>
    <string name="history">Heart-rate Data History</string>
    <string name="searchHint">Search…</string>
    <string name="searchSend">Search</string>
    <string name="noResults">No Results. \nPlease try a different search.</string>
    <string name="reset">Reset</string>
    <string name="restingTest">Start Resting Heart-Rate Tracking on Watch.</string>
    <string name="restingDelete">Delete Just Resting Heart-Rate Data.</string>
    <string name="guideDelete">Delete Just Heart-Rate Data from Guide Sessions.</string>
    <string name="refreshGuides">Refresh List of Guides.</string>

    concern_view Displayed Strings
    <string name="concernDuring">During the guide %s</string>
    <string name="concernLevel">%s levels of stress were detected.</string>
    <string name="concernDate">This was detected on %s.</string>
    <string name="concernExplanation">Support is available for you.</string>
    <string name="stressExplanation">Continued stress like this can endanger you or your loved one.</string>
    <string name="carerCentre">Find a Carer Help Centre near you.</string>
    <string name="carerUK">Find out about support plans from CarersUK.</string>
    <string name="carersScotland">Browse Carers Trust\'s Scotland Page.</string>

    Placeholder Text
    <string name="loading">Loading…</string>

    Image Alt Text
    <string name="unfilledFav">Unfilled Favourite Icon</string>
    <string name="unfilledDaily">Unfilled Daily Icon</string>
    <string name="backButton">Back Button Icon</string>
    <string name="guideList">Guide List Icon</string>
    <string name ="heartRateData">Health Data Icon</string>
    <string name ="settingsIcon">Settings Icon</string>
    <string name ="deleteIcon">Delete Icon</string>
    <string name="homeIcon">Home Icon</string>
    <string name="concernIcon">Heart-rate Concern Icon</string>

</resources>