<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <Button
        android:id="@+id/begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restingTest"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/deleteResting"/>

    <Button
        android:id="@+id/deleteResting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restingDelete"
        app:layout_constraintTop_toBottomOf="@id/begin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/deleteGuideData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guideDelete"
        app:layout_constraintTop_toBottomOf="@id/deleteResting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/refreshGuideList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refreshGuides"
        app:layout_constraintTop_toBottomOf="@id/deleteGuideData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>