<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/favourite"
        android:layout_width="0sp"
        android:layout_height="0dp"
        android:contentDescription="@string/unfilledFav"
        android:src="@drawable/unheart"
        android:tag="false"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/twenty"
        app:layout_constraintStart_toStartOf="@id/zero"
        app:layout_constraintTop_toTopOf="@id/top" />

    <ImageView
        android:id="@+id/daily"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:contentDescription="@string/unfilledDaily"
        android:src="@drawable/unsave"
        android:tag="false"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/end"
        app:layout_constraintStart_toStartOf="@+id/eighty"
        app:layout_constraintTop_toTopOf="@+id/top" />


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/middle" />

    <Button
        android:id="@+id/send"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send_tutorial"
        app:layout_constraintEnd_toEndOf="@id/eighty"
        app:layout_constraintStart_toStartOf="@id/twenty"
        app:layout_constraintTop_toTopOf="@id/middle" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:contentDescription="@string/backButton"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="@id/bottom"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/aboveBack"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/twenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/eighty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/aboveBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>