<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/concernHeart"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:src="@drawable/concernHeart"
        android:contentDescription="@string/concernIcon"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/seventy"
        app:layout_constraintStart_toStartOf="@id/thirty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/concernContainer"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/concernContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/explanationContainer"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/concernHeart">

        <TextView
            android:id="@+id/concernDuring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concernDuring"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/concernLevel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/concernLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concernLevel"
            android:textAlignment="center"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/concernDuring" />

        <TextView
            android:id="@+id/concernDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concernDate"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/concernLevel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/explanationContainer"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@id/concernContainer"
        app:layout_constraintBottom_toTopOf="@id/horizontalSplit">

        <TextView
            android:id="@+id/stressExplanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stressExplanation"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/concernExplanation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/concernExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concernExplanation"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stressExplanation" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/helpContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/aboveHome"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/horizontalSplit">

        <androidx.cardview.widget.CardView
            android:id="@+id/carerCentre"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/red"
            app:layout_constraintBottom_toTopOf="@+id/carerUK"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/carersScotland"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/carerCentre"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_margin="2dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/carersScotland"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/red"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/carerCentre"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/carersScotland"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_margin="2dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/carerUK"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carerCentre">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/carerUK"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_margin="2dp"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/homeIcon"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="@id/bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/aboveHome" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalSplit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/aboveHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/thirty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/seventy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.975"/>

</androidx.constraintlayout.widget.ConstraintLayout>