<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/search"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/searchHint"
        android:inputType="text"
        android:hint="@string/searchHint"
        app:layout_constraintTop_toTopOf="@id/top"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/end"
        android:padding="10sp"/>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchSend"
        app:layout_constraintEnd_toStartOf="@id/reset"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintBottom_toTopOf="@id/guideContainer"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/send"
        app:layout_constraintBottom_toTopOf="@id/guideContainer"/>

    <ScrollView
        android:id="@+id/guideContainer"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:background="@drawable/stroke_bg"
        app:layout_constraintTop_toBottomOf="@id/send"
        app:layout_constraintBottom_toBottomOf="@id/aboveHome"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/end">

        <LinearLayout
            android:id="@+id/guideFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10sp"
            />

    </ScrollView>

    <ImageView
        android:id="@+id/home"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:contentDescription="@string/homeIcon"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="@id/bottom"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/aboveHome" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/aboveHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>