<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/historyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="10sp"
        app:layout_constraintTop_toTopOf="@id/top"
        app:layout_constraintBottom_toTopOf="@id/heartDataScroller"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/end"/>

    <ScrollView
        android:id="@+id/heartDataScroller"
        android:layout_width="0sp"
        android:layout_height="0sp"
        app:layout_constraintBottom_toBottomOf="@id/middle"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/historyText">

        <LinearLayout
            android:id="@+id/dataContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="@id/middle"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintBottom_toBottomOf="@id/aboveBack">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="0sp"
                android:layout_height="0sp"
                android:src="@drawable/delete"
                android:contentDescription="@string/deleteIcon"
                app:layout_constraintBottom_toBottomOf="@id/middleDelete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/topImg"
                app:layout_constraintDimensionRatio="1:1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleteData"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/middleDelete" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/middleDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/home"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:src="@drawable/home"
        android:contentDescription="@string/homeIcon"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toTopOf="@id/aboveBack"
        app:layout_constraintBottom_toBottomOf="@id/bottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/aboveBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>